Adding changes to exportToExcel page and js'

--- a/Excel-Connector-Test-Tool/Export-Data-To-Excel/index.html
+++ b/Excel-Connector-Test-Tool/Export-Data-To-Excel/index.html
@@ -12,24 +12,35 @@
         <table class="content-table">
             <thead>
             <tr>
-                <th>Header1</th>
-                <th>Header2</th>
-                <th>Header3</th>
+                <th>Symbol</th>
+                <th>Price</th>
+                <th>Name</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Data1</td>
-                <td>Data2</td>
-                <td>Data3</td>
+                <td id="A1">APPL</td>
+                <td id="B1">120.23</td>
+                <td id="C1">Apple Inc.</td>
             </tr>
             <tr>
-                <td>Data4</td>
-                <td>Data5</td>
-                <td>Data6</td>
+                <td id="A2">GME</td>
+                <td id="B2">208.3</td>
+                <td id="C2">GameStop Corp.</td>
+            </tr>
+            <tr>
+                <td id="A3">DOGE-USD</td>
+                <td id="B3">0.0529</td>
+                <td id="C3">Dogecoin USD</td>
+            </tr>
+            <tr>
+                <td id="A4">BMW.DE</td>
+                <td id="B4">83.73</td>
+                <td id="C4">BMW</td>
             </tr>
         </tbody>
         </table> 
+        <button class="buttons" id="sendToExcel">Send to Excel</button>
 </body>
 <script type="text/javascript" src="../../libs/desktop.js"></script>
 <script type="text/javascript" src="../../libs/office.js"></script>
