Adding new changes to Word and Excel tools, css and structure for html for word

--- a/Word-Connector-Test-Tool/index.html
+++ b/Word-Connector-Test-Tool/index.html
@@ -11,10 +11,10 @@
 <body>
     <body>
         <div class="buttonDiv"> 
-        <button id="excelStatusButton" class="buttons">Check Excel Status</button>
-        <button id="subscribeExcelStatus" class="buttons">Subscribe to Excel Status Change</button>
-        <button id="sendDataToExcel" class="buttons">Send data to Excel</button>
-        <button id="startExcelJPM" class="buttons">Start Excel (JPM)</button>
+        <button id="wordStatusButton" class="buttons">Check Word Status</button>
+        <button id="subscribeWordStatus" class="buttons">Subscribe to Word Status Change</button>
+        <button id="sendDataToWord" class="buttons">Send data to Word</button>
+        <button id="startWordJPM" class="buttons">Start Word (JPM)</button>
         <button id="home" class="buttons">Home</button>
         </div>
     </body>
