Adding changes to the Outlook tool

--- a/Outlook-Connector-Test-Tool/index.html
+++ b/Outlook-Connector-Test-Tool/index.html
@@ -14,6 +14,7 @@
         <button id="outlookStatusButton" class="buttons">Check Outlook Status</button>
         <button id="subscribeOutlookStatus" class="buttons">Subscribe to Outlook Status Change</button>
         <button id="sendEmail" class="buttons">Send Email</button>
+        <button id="sendAppointment" class="buttons">Create Appontment</button>
         <button id="CheckEmailFolder" class="buttons">Check Emails</button>
         <button id="home" class="buttons">Home</button>
         </div>
